# project-shattered

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.js  vite.config.ts
src/: App.css  App.jsx  App.tsx  AppManager.jsx  index.css  index.html  main.js  main.jsx  main.tsx  old.css  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/file/: commands.rs  manager.rs  mod.rs
src/components/: Nav.tsx  NavBar.jsx  NavBar.tsx  TitleBar.jsx  TitleBar.tsx  TopBar.tsx
src/pages/: Home.jsx  Home.tsx  NotFound.jsx  NotFound.tsx  Settings.jsx  UnderConstruction.jsx  UnderConstruction.tsx
